fix broken UI => done

--- a/src/index.css
+++ b/src/index.css
@@ -47,18 +47,9 @@
   animation: colorChange 2s linear infinite;
 }
 
-.section-hero .carousel-hero {
-}
-
 .section-hero .carousel-hero img {
   width: 100%;
   object-fit: cover;
-}
-
-.section-hero .carousel-hero {
-}
-
-.section-hero .wrapper-hero::after {
 }
 
 .section-countdown {
@@ -78,4 +69,18 @@
   top: 0;
   left: 0;
   z-index: 1;
+}
+
+/* Tùy chỉnh thanh cuộn cho trình duyệt WebKit-based */
+body::-webkit-scrollbar {
+  width: 8px; /* Chiều rộng của thanh cuộn */
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: pink; /* Màu nền của phần "nút" cuộn */
+  border-radius: 6px; /* Độ cong góc */
+}
+
+body::-webkit-scrollbar-track {
+  background-color: #f1f1f1; /* Màu nền của phần dọc theo thanh cuộn */
 }
